cmake_minimum_required(VERSION 3.5)


FILE (GLOB header_files *.h)
FILE (GLOB source_files *.c *.cc *.cpp)


add_library(abc_clang SHARED
    ${header_files}
    ${source_files}
)

target_link_libraries(abc_clang 
  PRIVATE
  LLVMAArch64CodeGen
LLVMAArch64AsmParser
LLVMAArch64Desc
LLVMAArch64Disassembler
LLVMAArch64Info
LLVMAArch64Utils
LLVMAMDGPUCodeGen
LLVMAMDGPUAsmParser
LLVMAMDGPUDesc
LLVMAMDGPUDisassembler
LLVMAMDGPUInfo
LLVMAMDGPUUtils
LLVMARMCodeGen
LLVMARMAsmParser
LLVMARMDesc
LLVMARMDisassembler
LLVMARMInfo
LLVMARMUtils
LLVMAVRCodeGen
LLVMAVRAsmParser
LLVMAVRDesc
LLVMAVRDisassembler
LLVMAVRInfo
LLVMBPFCodeGen
LLVMBPFAsmParser
LLVMBPFDesc
LLVMBPFDisassembler
LLVMBPFInfo
LLVMHexagonCodeGen
LLVMHexagonAsmParser
LLVMHexagonDesc
LLVMHexagonDisassembler
LLVMHexagonInfo
LLVMLanaiCodeGen
LLVMLanaiAsmParser
LLVMLanaiDesc
LLVMLanaiDisassembler
LLVMLanaiInfo
LLVMMipsCodeGen
LLVMMipsAsmParser
LLVMMipsDesc
LLVMMipsDisassembler
LLVMMipsInfo
LLVMMSP430CodeGen
LLVMMSP430AsmParser
LLVMMSP430Desc
LLVMMSP430Disassembler
LLVMMSP430Info
LLVMNVPTXCodeGen
LLVMNVPTXDesc
LLVMNVPTXInfo
LLVMPowerPCCodeGen
LLVMPowerPCAsmParser
LLVMPowerPCDesc
LLVMPowerPCDisassembler
LLVMPowerPCInfo
LLVMRISCVCodeGen
LLVMRISCVAsmParser
LLVMRISCVDesc
LLVMRISCVDisassembler
LLVMRISCVInfo
LLVMSparcCodeGen
LLVMSparcAsmParser
LLVMSparcDesc
LLVMSparcDisassembler
LLVMSparcInfo
LLVMSystemZCodeGen
LLVMSystemZAsmParser
LLVMSystemZDesc
LLVMSystemZDisassembler
LLVMSystemZInfo
LLVMWebAssemblyCodeGen
LLVMWebAssemblyAsmParser
LLVMWebAssemblyDesc
LLVMWebAssemblyDisassembler
LLVMWebAssemblyInfo
LLVMWebAssemblyUtils
LLVMX86CodeGen
LLVMX86AsmParser
LLVMX86Desc
LLVMX86Disassembler
LLVMX86Info
LLVMXCoreCodeGen
LLVMXCoreDesc
LLVMXCoreDisassembler
LLVMXCoreInfo
LLVMAnalysis
LLVMCodeGen
LLVMCore
LLVMipo
LLVMAggressiveInstCombine
LLVMInstCombine
LLVMInstrumentation
LLVMMC
LLVMMCParser
LLVMObjCARCOpts
LLVMOption
LLVMScalarOpts
LLVMSupport
LLVMTransformUtils
LLVMVectorize
clangBasic
clangCodeGen
clangDriver
clangFrontend
clangFrontendTool
clangSerialization
LLVMMIRParser
LLVMGlobalISel
LLVMCFGuard
LLVMAsmPrinter
LLVMDebugInfoDWARF
LLVMDebugInfoMSF
LLVMSelectionDAG
LLVMMCDisassembler
LLVMCoverage
LLVMLTO
LLVMPasses
LLVMTarget
LLVMCoroutines
LLVMIRReader
LLVMAsmParser
LLVMBitWriter
LLVMLinker
LLVMExtensions
clangRewriteFrontend
clangARCMigrate
clangStaticAnalyzerFrontend
clangStaticAnalyzerCheckers
clangStaticAnalyzerCore
clangCrossTU
clangIndex
clangParse
clangSema
clangAnalysis
clangASTMatchers
clangEdit
clangAST
LLVMFrontendOpenMP
LLVMProfileData
LLVMObject
LLVMDebugInfoCodeView
LLVMBitReader
LLVMTextAPI
LLVMBinaryFormat
LLVMRemarks
LLVMBitstreamReader
clangFormat
clangToolingInclusions
clangToolingCore
clangRewrite
clangLex
LLVMDemangle
)
